--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsApps.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsApps.cshtml
@@ -4,19 +4,10 @@
 }
 
 <style>
-    .setting-heading img,
-    .setting-heading h2 {
-        display: inline-block;
-        vertical-align: middle;
-    }
-
-    .setting-heading img {
-        opacity: 0.7;
-        filter: alpha(opacity=70);
-    }
-
     .setting-heading h2 {
         margin-left: 0.1em;
+        margin-top: 0px;
+        margin-bottom: 20px;
     }
 </style>
 
