--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/Authentication.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/Authentication.cshtml
@@ -16,9 +16,10 @@
 
     <base href="@Model.Context.Paths.Base">
 
-    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.mplib/styles/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" id="bootstrap-css">
+    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/fonts.css" media="all" rel="stylesheet" type="text/css">
+    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/bootstrap.min.css" media="all" rel="stylesheet" type="text/css">
     <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/font.awesome.min.css" media="all" rel="stylesheet" type="text/css">
-    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/adminflare.min.css" media="all" rel="stylesheet" type="text/css" id="adminflare-css">
+    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/adminflare.min.css" media="all" rel="stylesheet" type="text/css">
     <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/pages.min.css" media="all" rel="stylesheet" type="text/css">
     <script src="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.mplib/scripts/jquery-1.10.2.js" type="text/javascript"></script>
 
@@ -56,7 +57,7 @@
         <form action="multiplug/authentication/@{if (!string.IsNullOrEmpty(Model.Extension.Model.Referrer)) { @Raw( "?referrer=" + Model.Extension.Model.Referrer) } }" method="post" accept-charset="utf-8">
             <fieldset>
                 <div class="fields">
-                    <input type="text" name="Username" placeholder="Username" id="id_username" tabindex="1">
+                    <input type="text" name="Username" placeholder="Username" id="id_username" tabindex="1" autocomplete="off" autofocus>
 
                     <input type="password" name="Password" placeholder="Password" id="id_password" tabindex="2">
 
